Service protocol v4 (#447)