@@ -8,13 +8,17 @@
 // https://github.com/restatedev/sdk-java/blob/main/LICENSE
 package dev.restate.sdk.core;
 
-import static dev.restate.sdk.core.ProtoUtils.headerFromMessage;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.google.protobuf.MessageLite;
 import com.google.protobuf.MessageLiteOrBuilder;
-import dev.restate.generated.service.protocol.Protocol;
-import dev.restate.sdk.common.syscalls.ServiceDefinition;
+import dev.restate.sdk.core.generated.protocol.Protocol;
+import dev.restate.sdk.core.statemachine.InvocationInput;
+import dev.restate.sdk.core.statemachine.MessageHeader;
+import dev.restate.sdk.core.statemachine.ProtoUtils;
+import dev.restate.sdk.endpoint.definition.HandlerRunner;
+import dev.restate.sdk.endpoint.definition.ServiceDefinition;
+import dev.restate.sdk.endpoint.definition.ServiceDefinitionFactories;
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
@@ -28,9 +32,9 @@ public final class TestDefinitions {
   private TestDefinitions() {}
 
   public interface TestDefinition {
-    ServiceDefinition<?> getServiceDefinition();
+    ServiceDefinition getServiceDefinition();
 
-    Object getServiceOptions();
+    HandlerRunner.Options getServiceOptions();
 
     String getMethod();
 
@@ -73,17 +77,17 @@ public final class TestDefinitions {
 
   public static TestInvocationBuilder testInvocation(Object service, String handler) {
     if (service instanceof ServiceDefinition) {
-      return new TestInvocationBuilder((ServiceDefinition<?>) service, null, handler);
+      return new TestInvocationBuilder((ServiceDefinition) service, null, handler);
     }
 
     // In case it's code generated, discover the adapter
-    ServiceDefinition<?> serviceDefinition =
-        RestateEndpoint.discoverServiceDefinitionFactory(service).create(service);
+    ServiceDefinition serviceDefinition =
+        ServiceDefinitionFactories.discover(service).create(service, null);
     return new TestInvocationBuilder(serviceDefinition, null, handler);
   }
 
-  public static <O> TestInvocationBuilder testInvocation(
-      ServiceDefinition<O> service, O options, String handler) {
+  public static TestInvocationBuilder testInvocation(
+      ServiceDefinition service, HandlerRunner.Options options, String handler) {
     return new TestInvocationBuilder(service, options, handler);
   }
 
@@ -92,12 +96,13 @@ public final class TestDefinitions {
   }
 
   public static class TestInvocationBuilder {
-    protected final @Nullable ServiceDefinition<?> service;
-    protected final @Nullable Object options;
+    protected final @Nullable ServiceDefinition service;
+    protected final HandlerRunner.@Nullable Options options;
     protected final @Nullable String handler;
     protected final @Nullable String invalidReason;
 
-    TestInvocationBuilder(ServiceDefinition<?> service, @Nullable Object options, String handler) {
+    TestInvocationBuilder(
+        ServiceDefinition service, HandlerRunner.@Nullable Options options, String handler) {
       this.service = service;
       this.options = options;
       this.handler = handler;
@@ -113,7 +118,7 @@ public final class TestDefinitions {
       this.invalidReason = invalidReason;
     }
 
-    public WithInputBuilder withInput(MessageLiteOrBuilder... messages) {
+    public WithInputBuilder withInput(Stream<MessageLiteOrBuilder> messages) {
       if (invalidReason != null) {
         return new WithInputBuilder(invalidReason);
       }
@@ -122,13 +127,17 @@ public final class TestDefinitions {
           service,
           options,
           handler,
-          Arrays.stream(messages)
+          messages
               .map(
                   msgOrBuilder -> {
                     MessageLite msg = ProtoUtils.build(msgOrBuilder);
-                    return InvocationInput.of(headerFromMessage(msg), msg);
+                    return InvocationInput.of(MessageHeader.fromMessage(msg), msg);
                   })
               .collect(Collectors.toList()));
+    }
+
+    public WithInputBuilder withInput(MessageLiteOrBuilder... messages) {
+      return withInput(Arrays.stream(messages));
     }
   }
 
@@ -143,8 +152,8 @@ public final class TestDefinitions {
     }
 
     WithInputBuilder(
-        ServiceDefinition<?> service,
-        @Nullable Object options,
+        ServiceDefinition service,
+        HandlerRunner.@Nullable Options options,
         String method,
         List<InvocationInput> input) {
       super(service, options, method);
@@ -159,14 +168,14 @@ public final class TestDefinitions {
                 .map(
                     msgOrBuilder -> {
                       MessageLite msg = ProtoUtils.build(msgOrBuilder);
-                      return InvocationInput.of(headerFromMessage(msg), msg);
+                      return InvocationInput.of(MessageHeader.fromMessage(msg), msg);
                     })
-                .collect(Collectors.toList()));
+                .toList());
       }
       return this;
     }
 
-    public WithInputBuilder onlyUnbuffered() {
+    public WithInputBuilder onlyBidiStream() {
       this.onlyUnbuffered = true;
       return this;
     }
@@ -183,7 +192,7 @@ public final class TestDefinitions {
           actual ->
               assertThat(actual)
                   .asInstanceOf(InstanceOfAssertFactories.LIST)
-                  .isEqualTo(builtMessages));
+                  .containsExactlyElementsOf(builtMessages));
     }
 
     public ExpectingOutputMessages assertingOutput(Consumer<List<MessageLite>> messages) {
@@ -200,8 +209,8 @@ public final class TestDefinitions {
   }
 
   public abstract static class BaseTestDefinition implements TestDefinition {
-    protected final @Nullable ServiceDefinition<?> service;
-    protected final @Nullable Object options;
+    protected final @Nullable ServiceDefinition service;
+    protected final HandlerRunner.@Nullable Options options;
     protected final @Nullable String invalidReason;
     protected final String method;
     protected final List<InvocationInput> input;
@@ -210,8 +219,8 @@ public final class TestDefinitions {
     protected final String named;
 
     private BaseTestDefinition(
-        @Nullable ServiceDefinition<?> service,
-        @Nullable Object options,
+        @Nullable ServiceDefinition service,
+        HandlerRunner.@Nullable Options options,
         @Nullable String invalidReason,
         String method,
         List<InvocationInput> input,
@@ -229,12 +238,12 @@ public final class TestDefinitions {
     }
 
     @Override
-    public ServiceDefinition<?> getServiceDefinition() {
+    public ServiceDefinition getServiceDefinition() {
       return Objects.requireNonNull(service);
     }
 
     @Override
-    public Object getServiceOptions() {
+    public HandlerRunner.Options getServiceOptions() {
       return options;
     }
 
@@ -274,8 +283,8 @@ public final class TestDefinitions {
     private final Consumer<List<MessageLite>> messagesAssert;
 
     private ExpectingOutputMessages(
-        @Nullable ServiceDefinition<?> service,
-        @Nullable Object options,
+        @Nullable ServiceDefinition service,
+        HandlerRunner.@Nullable Options options,
         @Nullable String invalidReason,
         String method,
         List<InvocationInput> input,
@@ -295,8 +304,8 @@ public final class TestDefinitions {
     }
 
     ExpectingOutputMessages(
-        @Nullable ServiceDefinition<?> service,
-        @Nullable Object options,
+        @Nullable ServiceDefinition service,
+        HandlerRunner.@Nullable Options options,
         @Nullable String invalidReason,
         String method,
         List<InvocationInput> input,
